app/assets/stylesheets/1customUtilities.scss
.center {
  display: flex;
  justify-content: center;
  align-items: center;
}
.right {
  display: flex;
  justify-content: right;
  align-items: center;
  float: right;
}
.overflow {
  height: 200px;
  overflow-y: scroll;
  overflow-x: hidden;
}
.overflowMD {
  height: 400px;
  overflow-y: scroll;
  overflow-x: hidden;
}
.overflowLG {
  height: 500px;
  overflow-y: scroll;
  overflow-x: hidden;
}

